tdf#146747 InternalItems has to be null terminated

Change-Id: I15c0afdcae3e9bc1412e6564c15df2196515052e